--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,21 @@
 {
   "name": "Ilac Takip Uygulamasi",
-  "short_name": "Ilac Takip",
+  "short_name": "DynaCare",
   "start_url": "./",
   "display": "standalone",
-    "description": "Ilac Takip Uygulamasi",
+    "description": "DynaCare",
 
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "./images/main_icon.png",
-      "sizes": "1024x1024",
+      "src": "./images/AppIcon.png",
+      "sizes": "1408x768",
       "type": "image/png"
     },
       {
-    "src": "./images/main_icon.png",
-    "sizes": "1024x1024",
+    "src": "./images/AppIcon.png",
+    "sizes": "1408x768",
     "type": "image/png"
   }
   ]
